Add ToyyibPay payment integration + Fix backend 502 error
- Integrated ToyyibPay payment gateway (copied from MizrahBeauty)
- Added customer information form (name, email, phone)
- Added WebView payment flow
- Created all payment API clients and repositories
- Updated AndroidManifest with deep link
- Added Retrofit, Gson, OkHttp dependencies
- Fixed backend to bind to 0.0.0.0 (fixes 502 Bad Gateway on Render)
- Updated UserSessionManager with email and phone support
- Added keyboard fix script for emulator
- Cleaned up unnecessary MD documentation files
- Created NEW-THINGS.md with all updates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,21 @@
             android:name=".PaymentActivity"
             android:exported="false" />
         <activity
+            android:name=".PaymentWebViewActivity"
+            android:exported="true"
+            android:launchMode="singleTop">
+            <!-- Deep link intent filter for ToyyibPay return URL -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="tempahanphotostudio"
+                    android:host="payment"
+                    android:path="/result" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Splash"
             android:exported="true">
             <intent-filter>
